--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -68,7 +68,7 @@ if (sources.length !== 2) {
       ]}
     />
   }
-  <div class="col-start-1 row-start-1 px-4 text-center flex flex-col-reverse justify-center items-center">
+  <div class="col-start-1 row-start-1 flex flex-col-reverse justify-center items-center px-4 text-center z-10">
     <Button tag="a" to="#services">{buttonCaption}</Button>
     <h1 class="hero-txt uppercase text-3xl md:mb-6 md:text-4xl lg:text-6xl">{title}</h1>
     {headline && <div class="hero-txt mb-8 text-2xl italic">{headline}</div>}
