--- a/src/components/SEO/components/FacebookMeta.astro
+++ b/src/components/SEO/components/FacebookMeta.astro
@@ -87,4 +87,4 @@ if (hasImage) {
 {fbAppID && <meta property="fb:app_id" content={fbAppID} />}
 
 {socialLinks?.facebook && <meta property="article:publisher" content={socialLinks.facebook.to} />}
-{socialLinks && Object.entries(socialLinks).map(([key, {to}]) => <meta property="og:see_also" content={to} />)}
+{socialLinks && Object.values(socialLinks).map(({ to }) => <meta property="og:see_also" content={to} />)}
