--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -42,8 +42,9 @@ const {
 </PageSection>
 
 <style is:global>
-  .about .astro-imagetools-picture {
+  .about > .astro-imagetools-picture {
     @apply mx-auto mb-3;
+
     img {
       @apply w-60 h-60 border-round;
     }
