--- a/src/components/sections/GalleryItem.astro
+++ b/src/components/sections/GalleryItem.astro
@@ -3,23 +3,24 @@ export interface Props {
   item: SectionItem;
 }
 
-import { renderPicture  } from 'astro-imagetools/api';
+import { renderPicture } from 'astro-imagetools/api';
 import type { PictureHTMLData } from 'astro-imagetools';
 import getImagePath from '@/helpers/getImagePath';
 import escapeHTML from '@/lib/escapeHTML';
 import getImageFormats from '@/helpers/getImageFormats';
 
-const { item: { title, subtitle, image } } = Astro.props as Props;
+const {
+  item: { title, subtitle, image },
+} = Astro.props as Props;
 
 const src = getImagePath(image?.src || '');
 
 const { link, style, picture }: PictureHTMLData = await renderPicture({
   src,
   alt: escapeHTML(image?.alt),
-  layout: 'fullWidth',
+  layout: 'fill',
   format: getImageFormats() as unknown as [],
 });
-
 
 let n = picture.indexOf('<img');
 let img = picture.substring(n);
@@ -38,11 +39,8 @@ const imgWidth = getVal('width', img);
 const imgHeight = getVal('height', img);
 const imgSrc = getVal('src', img);
 ---
-<a role="button" tabindex={-1} class="gallery-box" href={imgSrc}
-  data-pswp-width={imgWidth}
-  data-pswp-height={imgHeight}
-  target="_blank"
->
+
+<a role="button" tabindex={-1} class="gallery-box" href={imgSrc} data-pswp-width={imgWidth} data-pswp-height={imgHeight} target="_blank">
   <Fragment set:html={link + style + picture} />
 
   <div class="gallery-box-caption">
@@ -53,20 +51,21 @@ const imgSrc = getVal('src', img);
 
 <style>
   .gallery-box {
-    @apply block relative bg-transparent hover:text-[#d6370c];
-    .astro-imagetools-picture img {
-      @apply block w-full h-full object-cover;
+    @apply relative block bg-transparent;
+
+    &:hover > .gallery-box-caption {
+      @apply opacity-100;
     }
   }
 
   .gallery-box-caption {
-    @apply flex flex-col items-center justify-center
-    w-full h-full
-    absolute bottom-0
-    text-center
-    text-white bg-[rgba(244,98,58,.9)]
+    @apply absolute bottom-0
+    flex flex-col items-center justify-center
+    h-full w-full
+
+    bg-[rgba(244,98,58,.9)]
+    text-center text-white
     opacity-0 transition-opacity
-    hover:opacity-100;
   }
 
   .project-category {
@@ -76,5 +75,4 @@ const imgSrc = getVal('src', img);
   .project-name {
     @apply text-lg;
   }
-
 </style>
