--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,30 +3,11 @@ export interface Props {
   page: Page;
 }
 
-import Image from 'astro-imagetools';
+import { Picture } from 'astro-imagetools/components';
 import getImagePath from '@/helpers/getImagePath';
-import getImageFormats from '@/helpers/getImageFormats';
-// import ArtImage from '@/components/images/ArtImage.astro';
 import Button from './Button.astro';
 
 const { page } = Astro.props as Props;
-
-//   {sources && <ArtImage sources={sources} alt={alt} loading="eager" classes="col-start-1 row-start-1" />}
-
-/*
-  {sources && (
-    <Image
-      src={sources[0].src}
-      alt={alt}
-      artDirectives={[
-        {
-          src: sources[1].src,
-          media: sources[1].media,
-        },
-      ]}
-    />
-  )}
-*/
 
 const { title = '', headline = '' } = page;
 
@@ -47,43 +28,60 @@ const sources = items.filter(({ image }) => image?.src)
   .map(({ image: { alt, src, media } }) => (
     { src: getImagePath(src), media, alt }
   ));
+
 if (sources.length !== 2) {
   throw new Error('expected 2 items in frontmatter for hero image');
 }
 
+if (!sources[1].media) {
+  throw new Error('media is expected for second hero image in frontmatter');
+}
 ---
 <div class="hero">
-  {<Image
-      src={sources[0].src}
-      alt={sources[0].alt}
-      placeholder="none"
-      layout="fullWidth"
-      preload={true}
-      format={getImageFormats() as unknown as []}
-      artDirectives={[
-        {
-          src: sources[1].src,
-          media: sources[1].media,
-        },
-      ]}
-    />
-  }
+  <Picture
+    src={sources[0].src}
+    alt={sources[0].alt}
+    placeholder="none"
+    layout="fullWidth"
+    preload="webp"
+    loading="eager"
+    format={['webp', 'jpeg']}
+    artDirectives={[
+      {
+        src: sources[1].src,
+        media: sources[1].media,
+      },
+    ]}
+  />
+
   <div class="col-start-1 row-start-1 flex flex-col-reverse justify-center items-center px-4 text-center z-10">
-    <Button tag="a" to="#services">{buttonCaption}</Button>
-    <h1 class="hero-txt uppercase text-3xl md:mb-6 md:text-4xl lg:text-6xl">{title}</h1>
-    {headline && <div class="hero-txt mb-8 text-2xl italic">{headline}</div>}
+    <Button tag="a" to="#services">
+      {buttonCaption}
+    </Button>
+
+    <h1 class="txt uppercase text-3xl md:mb-6 md:text-4xl lg:text-6xl">
+      {title}
+    </h1>
+
+    {headline && (
+      <div class="txt mb-8 text-2xl italic">
+        {headline}
+      </div>
+    )}
   </div>
 </div>
 
-<style is:global>
+<style>
   .hero {
     @apply grid;
-  }
-  .hero > .astro-imagetools-picture {
-    @apply col-start-1 row-start-1;
-  }
-  .hero-txt {
-    color: white;
-    text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
+
+    > :global(.astro-imagetools-picture) {
+      @apply col-start-1 row-start-1;
+    }
+
+    .txt {
+      color: white;
+      text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
+    }
   }
 </style>
