--- a/src/pages/[locale].astro
+++ b/src/pages/[locale].astro
@@ -1,13 +1,9 @@
 ---
-import i18n from '@/config/i18n';
 import HomePage from '@/components/HomePage.astro';
+import getPaths from '@/helpers/getPaths';
 
 export async function getStaticPaths() {
-  return Object.keys(i18n.locales)
-    .filter((locale) => locale !== i18n.defaultLocale)
-    .map((locale) => ({
-      params: { locale },
-    }));
+  return getPaths();
 }
 
 const { locale } = Astro.params;
