--- a/src/pages/[locale]/404.astro
+++ b/src/pages/[locale]/404.astro
@@ -1,5 +1,5 @@
 ---
-import HomePage from '@/components/HomePage.astro';
+import NotFound from '@/components/NotFound.astro';
 import getPaths from '@/helpers/getPaths';
 
 export async function getStaticPaths() {
@@ -13,4 +13,4 @@ if (!locale) {
 }
 ---
 
-<HomePage locale={locale} />
+<NotFound locale={'' + locale} />
