--- a/src/components/LayoutSimple.astro
+++ b/src/components/LayoutSimple.astro
@@ -10,7 +10,7 @@ import Favicons from './Favicons.astro';
 import Header from './header/Header.astro';
 import Footer from './footer/Footer.astro';
 
-const pathname = new URL(Astro.request.url).pathname;
+const { pathname } = Astro.canonicalURL;
 const locale = getLocaleFromUrlPathname(pathname);
 
 const contacts = await fetchContacts();
