--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,4 +21,34 @@
   .body-text__color {
     @apply text-muted dark:text-gray-50;
   }
+  .markdown-body {
+    h1, h2, h3, h4, h5, h6 {
+      line-height: 1.2;
+      margin: 0 0 1rem;
+    }
+    h2:not(:first-child), h3:not(:first-child), h4:not(:first-child) {
+      margin-top: 3rem;
+    }
+    h2 {
+      border-bottom: 1px solid gray;
+      font-size: 2rem;
+      font-weight: 600;
+      padding-bottom: 0.25rem;
+    }
+    h3 {
+      font-size: 1.8rem;
+    }
+    blockquote, ol, p, table, ul {
+      /* color: var(--font-color); */
+      font-size: 1.1rem;
+      margin: 0 0 2rem;
+    }
+    ul {
+      list-style-type: disc;
+      padding-inline-start: 40px;
+    }
+    ol li, ul li {
+      margin-bottom: 0.5rem;
+    }
+  }
 }
