--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -6,19 +6,19 @@ import Favicon48 from '../assets/logo.png?w=48&format=png';
 import Favicon192 from '../assets/logo.png?w=192&format=png';
 import Favicon167 from '../assets/logo.png?w=167&format=png';
 import Favicon180 from '../assets/logo.png?w=180&format=png';
-
 ---
+
 <link rel="icon" type="image/x-icon" href={Favicon} />
 
 <!-- For all browsers -->
-<link rel="icon" type="image/png" sizes="16x16" href={Favicon16}>
-<link rel="icon" type="image/png" sizes="32x32" href={Favicon32}>
+<link rel="icon" type="image/png" sizes="16x16" href={Favicon16} />
+<link rel="icon" type="image/png" sizes="32x32" href={Favicon32} />
 
 <!-- For Google and Chrome -->
-<link rel="icon" type="image/png" sizes="48x48" href={Favicon48}>
-<link rel="icon" type="image/png" sizes="192x192" href={Favicon192}>
+<link rel="icon" type="image/png" sizes="48x48" href={Favicon48} />
+<link rel="icon" type="image/png" sizes="192x192" href={Favicon192} />
 
 <!-- For iPad -->
-<link rel="apple-touch-icon" type="image/png" sizes="167x167" href={Favicon167}>
+<link rel="apple-touch-icon" type="image/png" sizes="167x167" href={Favicon167} />
 <!-- For iPhone -->
-<link rel="apple-touch-icon" type="image/png" sizes="180x180" href={Favicon180}>
+<link rel="apple-touch-icon" type="image/png" sizes="180x180" href={Favicon180} />
