--- a/src/components/SEO/SEO.astro
+++ b/src/components/SEO/SEO.astro
@@ -4,7 +4,7 @@ export interface Props {
 }
 
 import i18n from '@/config/i18n';
-import seoConfig from '@/config/seoConfig';
+import seoConfig from '@/config/seo.config.mjs';
 import config from '@/config/website';
 import getLocaleFromUrlPathname from '@/helpers/getLocaleFromUrlPathname';
 import SeoBase from './SeoBase.astro';
@@ -16,7 +16,7 @@ if (themeColor) {
   if (!seo.meta) {
     seo.meta = [];
   }
-  seo.meta.push({ name: 'theme-color', content: themeColor });
+  seo.meta.push({ name: 'theme-color', content: themeColor as string });
 }
 
 if (!seo.link) {
