--- a/src/components/header/components/menu/MainNav.astro
+++ b/src/components/header/components/menu/MainNav.astro
@@ -20,7 +20,7 @@ const { locale } = Astro.props as Props;
 
 <style is:global>
   .main-nav {
-    @apply hidden grow basis-full items-center py-4 lg:!flex lg:!flex-row lg:basis-auto lg:py-0;
+    @apply hidden grow basis-full items-center py-4 lg:!flex lg:basis-auto lg:!flex-row lg:py-0;
   }
 
   .main-nav.open {
