--- a/src/layouts/home.astro
+++ b/src/layouts/home.astro
@@ -15,9 +15,7 @@ import { getSection } from '@/cms/section';
 const { pathname } = Astro.canonicalURL;
 const locale = getLocaleFromUrlPathname(pathname);
 
-const sections = (await Astro.glob('/content/sections/*.??.md'))
-  .map(getSection)
-  .filter((section) => section.locale === locale);
+const sections = (await Astro.glob('/content/sections/*.??.md')).map(getSection).filter((section) => section.locale === locale);
 
 const findSectionById = (id: string) => {
   const section = sections.find((item) => item.id === id);
@@ -46,6 +44,7 @@ const seo = {
   nofollow,
 };
 ---
+
 <Layout seo={seo}>
   <Hero page={page} />
   <Services section={services} />
