--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -13,6 +13,6 @@ const {
 <PageSection id={id} title={title} subtitle={subtitle} classes="text-center">
   <Content />
   <ul class="mt-18 grid gap-12 lg:grid-cols-3">
-    {items?.map((item) => <ServiceItem item={item} />)}
+    {items?.map((item, index) => <ServiceItem item={item} index={index} />)}
   </ul>
 </PageSection>
