--- a/src/layouts/simple.astro
+++ b/src/layouts/simple.astro
@@ -1,10 +1,12 @@
 ---
 import { getPage } from '@/cms/page';
+import getLocaleFromUrlPathname from '@/helpers/getLocaleFromUrlPathname';
 import Layout from '@/components/LayoutSimple.astro';
 import Container from '@/components/Container.astro';
 import PageHeader from '@/components/PageHeader.astro';
 
 const { pathname } = Astro.canonicalURL;
+const locale = getLocaleFromUrlPathname(pathname);
 const { content } = Astro.props;
 
 const { title, headline, metaTitle, metaDescription, keywords, noindex, nofollow, html } = getPage(content, pathname);
@@ -16,6 +18,8 @@ const seo = {
   headline,
   noindex,
   nofollow,
+  pathname,
+  locale,
 };
 ---
 <Layout seo={seo}>
