--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -33,7 +33,7 @@ if (!currentLocale) {
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <SEO seo={{ ...seo, contacts, socialLinks, address }} />
+    <SEO seo={{ ...seo, contacts, socialLinks, address, locale, pathname }} />
     <link rel="manifest" href="/manifest.webmanifest" />
 
     <Favicons />
