--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -34,7 +34,6 @@ if (!currentLocale) {
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <SEO seo={{ ...seo, contacts, socialLinks, address, locale, pathname }} />
-    <link rel="manifest" href="/manifest.webmanifest" />
 
     <Favicons />
   </head>
@@ -50,6 +49,6 @@ if (!currentLocale) {
 </html>
 
 <script>
-  import AOS from 'aos';
-  AOS.init();
+  // import AOS from 'aos';
+  // AOS.init();
 </script>
